<resources>
    <string name="app_name">NETWIN</string>
    <string name="account">品名</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loadingMessage">資料讀取中，請稍後．．．</string>
    <string name="title_activity_activity__prd__query__result">產品查詢結果</string>
    <string name="title_activity_activity__prd__detail">商品明細</string>
    <string name="product_name">商品品名：</string>
    <string name="product_origin">产地：</string>
    <string name="title_activity_activity__prd__query">商品查詢</string>
    <string name="title_activity_activity__big_fu_try">大福彩</string>
    <string name="game_start">開始遊戲</string>


    <string name="classify">CCE</string>
    <string name="bingo">賓果</string>
    <string name="bigFuTry">大福彩</string>
    <string name="wayLiTry">威力彩</string>
    <string name="threeEightTry">38樂合彩</string>
    <string name="bigLuckToa">大樂透</string>
    <string name="fourNineTry">49樂合彩</string>
    <string name="threeNineTry">39樂合彩</string>
    <string name="fiveThreeNine">今彩539</string>
    <string name="threeStarTry">3星彩</string>
    <string name="fourStarTry">4星彩</string>
    <string name="sixTry">六合彩</string>
    <string name="title_activity_activity__bingo">賓果</string>

    <!--下拉刷新-->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">釋放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暫未更新過</string>
    <string name="updated_at">上次更新於%1$s前</string>
    <string name="updated_just_now">剛剛更新</string>
    <string name="time_error">時間有問題</string>
    <string name="title_activity_activity__way_li_try">Activity_WayLiTry</string>
    <string name="title_activity_activity_fragment1">Activity_fragment1</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_fragment2">Activity_fragment2</string>
    <string name="title_activity_activity__gopher1">打地鼠</string>
    <string name="title_activity_activity__async">Activity_Async</string>
    <string name="title_activity_activity__pili__main">Activity_Pili_Main</string>
    <string name="title_activity_activity__surface">Activity_Surface</string>


</resources>
